<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="@dimen/height_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="24sp"
            android:id="@+id/btn_menu"
            android:src="@drawable/ic_hamburger"
            android:layout_margin="@dimen/margin_common"
            android:layout_height="24sp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_menu"
            android:layout_alignBottom="@+id/btn_menu"
            android:layout_marginStart="@dimen/margin_start_medium"

            android:layout_marginLeft="@dimen/margin_start_medium"

            android:layout_toRightOf="@+id/btn_menu"
            android:fontFamily="@font/poppins"
            android:lineHeight="@dimen/line_height_medium"
            android:text="@string/home"
            android:textColor="@color/text_black"
            android:textFontWeight="600"
            android:textSize="@dimen/text_size_medium">

        </TextView>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile_pic"
            android:layout_width="@dimen/img_size_medium"
            android:layout_height="@dimen/img_size_medium"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_common"
            android:src="@drawable/dummy_profile_pic"></com.mikhaellopez.circularimageview.CircularImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_end_medium"
            android:layout_toLeftOf="@id/img_profile_pic"
            android:src="@drawable/ic_notification_bell">

        </ImageView>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:background="@color/horizontal_line"/>
    <HorizontalScrollView
        android:id="@+id/chip_group"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_chip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:chipSpacing="@dimen/chip_spacing">

            <com.google.android.material.chip.Chip
                style="@style/Chip.withouticon"
                android:focusedByDefault="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_common"
                android:text="@string/all"></com.google.android.material.chip.Chip>

            <com.google.android.material.chip.Chip
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/trending"
                android:textSize="14sp"
                app:chipIcon="@drawable/ic_fire" />

            <com.google.android.material.chip.Chip
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/citymall"
                android:textSize="14sp"
                app:chipIcon="@drawable/ic_citymall" />

            <com.google.android.material.chip.Chip
                style="@style/Chip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/inspection"
                android:textSize="14sp"
                android:layout_marginRight="@dimen/margin_common"
                app:chipIcon="@drawable/ic_inspection" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/feed_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintVertical_bias="0"
        tools:listitem="@layout/feed_list_item"></include>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        tools:listitem="@layout/feed_list_item"></androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        app:cornerRadius="50sp"
        android:layout_marginBottom="@dimen/margin_bottom_small"
        app:icon="@drawable/ic_baseline_add_24"
        android:text="@string/post"
        android:textAppearance="@style/TextMedium"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></com.google.android.material.button.MaterialButton>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:id="@+id/bottom_nav"
        app:labelVisibilityMode="labeled"
        android:layout_height="@dimen/height_nav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>