<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/seprator"
        android:layout_width="match_parent"
        android:layout_height="8sp"
        android:background="@color/horizontal_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_common"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/seprator">


        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/feed_owner_img"
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:src="@drawable/dummy_profile_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/feed_owner_img"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:textFontWeight="600"
                android:textSize="@dimen/text_size_small"
                android:fontFamily="@font/poppins"
                android:textColor="@color/text_black"
                android:lineHeight="@dimen/line_height_small"
                android:text="@string/dummy_name"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20sp"
                android:layout_marginTop="2sp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/text_color_light"
                android:text="@string/dummy_location"></TextView>
        </LinearLayout>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="81sp"
            android:layout_height="32sp"
            app:cornerRadius="6px"
            android:background="@drawable/button_red_follow"
            android:text="फॉलो"
            android:textSize="12sp"
            android:layout_marginRight="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_add_24">
            </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="फॉलो"
                    android:gravity="center"
                    android:fontFamily="@font/poppins"
                    android:layout_marginLeft="6sp"
                    android:textColor="#E40046"
                    ></TextView>
            </LinearLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtFeedContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_common"
        android:layout_marginLeft="@dimen/margin_common"
        android:textSize="@dimen/text_size_small"
        android:lineSpacingExtra="1sp"
        android:layout_marginTop="@dimen/margin_top_common"
        android:textColor="@color/text_color_medium_light"
        android:fontFamily="@font/poppins"
        android:text="@string/dummy_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_common"
        android:maxHeight="300sp"
        android:scaleType="fitXY"
        android:src="@drawable/dummy_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFeedContent"></ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17sp"
        android:id="@+id/feature_container_view"
        android:layout_marginLeft="@dimen/margin_start_end_big"
        android:layout_marginRight="@dimen/margin_start_end_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_like_deselected"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="421"
                    style="@style/feature_text_container"
                    android:layout_marginLeft="@dimen/margin_start_end_small"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/like"
                android:layout_marginTop="@dimen/margin_start_end_small"
                android:gravity="center"
                style="@style/feature_text"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_deselected_share"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="421"
                    style="@style/feature_text_container"
                    android:layout_marginLeft="@dimen/margin_start_end_small"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/share"
                android:layout_marginTop="@dimen/margin_start_end_small"
                android:gravity="center"
                style="@style/feature_text"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_deselected_comment"></ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:text="421"
                    style="@style/feature_text_container"
                    android:layout_marginLeft="@dimen/margin_start_end_small"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent">
                </TextView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/comment"
                android:layout_marginTop="@dimen/margin_start_end_small"
                android:gravity="center"
                style="@style/feature_text"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44sp"
        android:layout_marginTop="@dimen/margin_top_bottom_medium"
        android:layout_marginLeft="@dimen/margin_common"
        android:layout_marginRight="@dimen/margin_common"
        android:background="@drawable/border_comment"
        android:layout_marginBottom="@dimen/margin_top_bottom_medium"
        app:layout_constraintTop_toBottomOf="@+id/feature_container_view"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_comment_profile_pic"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12sp"
            android:src="@drawable/dummy_profile_pic"></com.mikhaellopez.circularimageview.CircularImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9sp"
            android:layout_toRightOf="@+id/img_comment_profile_pic"
            android:fontFamily="@font/mukta_vaani"
            android:hint="@string/hint_comment_box"></TextView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_end_icon"
            android:src="@drawable/ic_send_svg"></ImageView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>